--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 body {
     height: 100dvh;
     font-family: Inter, "sans serif";
+    padding: 16px;
+    background-color: var(--bgcolor-grey-900);
 }
 
 :root {
@@ -26,8 +28,6 @@ main {
     height: 100%;
     justify-content: center;
     align-items: center;
-
-    background-color: var(--bgcolor-grey-900);
 }
 
 .profile-container {
@@ -36,15 +36,15 @@ main {
     align-items: center;
     gap: 1rem;
 
-    width: 270px;
-    min-width: 270px;
+    width: 450px;
+    max-width: 450px;
     background-color: var(--bgcolor-grey-800);
     border-radius: 15px;
-    padding: 20px;
+    padding: 18px;
 }
 
 .profile-image {
-    width: 75px;
+    width: 85px;
     border-radius: 100px;
     object-fit: cover;
 }
@@ -55,21 +55,21 @@ main {
     align-items: center;
 }
 
-.profile-info_texts .profile-info_name {
-    font-size: 1.3rem;
+.profile-info_texts h1 {
+    font-size: 1.7rem;
     font-weight: 700;
     color: white;
     margin-block-end: 5px;
 }
 
 .profile-info_residence {
-    font-size: .65rem;
+    font-size: .73rem;
     color: var(--clr-yellow);
     font-weight: 700;
 }
 
 .profile-about {
-    font-size: .65rem;
+    font-size: .73rem;
     color: rgb(151, 151, 151);
 }
 
@@ -87,11 +87,11 @@ ul li > * {
     display: block;
     text-decoration: none;
     color: white;
-    padding-block: 10px;
-    font-size: .65rem;
+    padding-block: 20px;
+    font-size: .8rem;
     font-weight: 700;
     background-color: var(--bgcolor-grey-700);
-    border-radius: 6px;
+    border-radius: 8px;
 }
 
 ul li a:is(:hover, :focus) {
@@ -99,18 +99,30 @@ ul li a:is(:hover, :focus) {
     color: black;
 }
 
-
-.attribution { 
-    font-size: 11px; text-align: center; 
-}
-
-.attribution a {
-    color: hsl(228, 45%, 44%); 
+a {
+    transition: background-color .3s ease 0s;
 }
 
 @media screen and (max-width: 375px) {
     .profile-container {
         width: 240px;
         min-width: 240px;
+    }
+
+    .profile-image {
+        width: 75px;
+    }
+
+    .profile-info_name {
+        font-size: 1.3rem;
+    }
+
+    .profile-info_residence, .profile-about {
+        font-size: .63rem;
+    }
+
+    ul li > * {
+        padding-block: 10px;
+        font-size: .63rem;
     }
 }
